added new story, made name bold

--- a/views/baaStory.html
+++ b/views/baaStory.html
@@ -1,7 +1,7 @@
 <div class="row" ng-show='myForm'>
   <div class='col-md-2'></div>
     <div class='col-md-8' id='formpage'>
-      <h1>Got something?</h1>
+      <h1>Got what?</h1>
       <form class='form-group' id='litte_buddy'>
       <div class='col-md-4'>
         What is your name?
@@ -77,7 +77,7 @@
   <div class='col-md-2'></div>
 
   <div class='col-md-8' id='page'>
-    <h1>{{story.name}}'s Baa Baa</h1>
+    <h1><b>{{story.name}}</b>'s Got what?</h1>
     {{story.excalmation}}, {{story.excalmation}}, a {{story.color}} {{story.animal}},<br>
     Have you any {{story.buy}}?<br>
     Three {{story.container}} full,<br>
