--- a/views/littlePigStory.html
+++ b/views/littlePigStory.html
@@ -1,7 +1,7 @@
 <div class="row" ng-show='myForm'>
   <div class='col-md-2'></div>
     <div class='col-md-8' id='formpage'>
-      <h1>Three Little Critters</h1>
+      <h1>A Number of Critters</h1>
       <form class='form-group' id='litte_pig'>
       <div class='col-md-4'>
         What is your name?
@@ -52,9 +52,9 @@
   <h1>Fun in the Blanks</h1>
   <div class='col-md-2'></div>
   <div class='col-md-8' id='page'>
-    <h1>{{story.name}}'s {{story.number}} {{story.animal}}</h1>
-    <P>Once there were {{story.number}} {{story.animal}}. They built a brick {{story.building}}. The big bad {{story.biganimal}} tried to {{story.action}} down the {{story.building}}. But he couldn't and the {{story.number}} {{story.animal}} were safe.</P>
-    <div class='end'><i class="fa fa-book"></i> The End<i class="fa fa-book"></i></div>
+    <h1><b>{{story.name}}</b>'s {{story.number}} {{story.animal}}</h1>
+    <P>Once there were {{story.number}} {{story.animal}}. They built a brick {{story.building}}. The big bad {{story.biganimal}} tried to {{story.action}} down the {{story.building}}. But he couldn't and the {{story.number}} {{story.animal}} were lived happily ever after.</P>
+    <div class='end'><!-- <i class="fa fa-book"></i> --> The End<!-- <i class="fa fa-book"></i>  --></div>
 
     <div class='button'><button ng-click='tableContents()' class='btn-primary'>Return to Table of Contents</button></div>
 
