--- a/css/story.css
+++ b/css/story.css
@@ -21,6 +21,9 @@ h1 {
   border-style: solid;
   border-color: rgb(0, 0, 0);
 }
+/*#page, input{
+  color: green;
+}*/
 
 /* Style for the end */
  .end {
