--- a/views/beanStalkStory.html
+++ b/views/beanStalkStory.html
@@ -52,10 +52,10 @@
   <h1>Fun in the Blanks</h1>
   <div class='col-md-2'></div>
   <div class='col-md-8' id='page'>
-    <h1>{{story.name}} and the Beanstalk</h1>
-    <p>One day {{story.name}} planted some magic beans. Overnight the beans grew into a giant beanstalk that stretched into the clouds. {{story.name}} climbed the beanstalk and saw a huge {{story.building}}.
-    <P> {{story.name}} {{story.action}} into the {{story.building}} and saw a {{story.color}} {{story.animal}} trapped in a large cage. The {{story.animal}} looked very sad. So {{story.name}} decided to free it.
-    <P> As {{story.name}} was opening the cage, The Giant {{story.action2}} into the room. {{story.name}} grabbed the {{story.animal}} and ran through the Giant's legs and out the door. The Giant chased them to the beanstalk. But {{story.name}} was too fast and slid down the beanstalk. Once at the bottom {{story.name}} grabbed a {{story.tool}} and chopped down the beanstalk so the Giant could not follow.</p>
+    <h1><b>{{story.name}}</b> and the Beanstalk</h1>
+    <p>One day <b>{{story.name}}</b> planted some magic beans. Overnight the beans grew into a giant beanstalk that stretched into the clouds. <b>{{story.name}}</b> climbed the beanstalk and saw a huge {{story.building}}.
+    <P> <b>{{story.name}}</b> {{story.action}} into the {{story.building}} and saw a {{story.color}} {{story.animal}} trapped in a large cage. The {{story.animal}} looked very sad. So <b>{{story.name}}</b> decided to free it.
+    <P> As <b>{{story.name}}</b> was opening the cage, The Giant {{story.action2}} into the room. <b>{{story.name}}</b> grabbed the {{story.animal}} and ran through the Giant's legs and out the door. The Giant chased them to the beanstalk. But <b>{{story.name}}</b> was too fast and slid down the beanstalk. Once at the bottom <b>{{story.name}}</b> grabbed a {{story.tool}} and chopped down the beanstalk so the Giant could not follow.</p>
 
     <div class='end'>The End</div>
 
