--- a/views/lambStory.html
+++ b/views/lambStory.html
@@ -16,7 +16,7 @@
         <input type='text' ng-model='story.animal'>
       </div><br>
       <div class='col-md-4'>
-        Name an animal body part
+        Name an animal body part (plural)
       </div>
       <div>
         <input type='text' ng-model='story.bodyPart'>
@@ -28,7 +28,7 @@
         <input type='text' ng-model='story.color'>
       </div><br>
       <div class='col-md-4'>
-      Some thing that is your favorite color.
+      A kind of food.
       </div>
       <div>
         <input type='text' ng-model='story.coloreditem'>
@@ -54,8 +54,8 @@
   <div class='col-md-2'></div>
 
   <div class='col-md-8' id='page'>
-    <h1>{{story.name}}'s Little Buddy</h1>
-    <p>{{story.name}} had a little {{story.animal}} it's {{story.bodyPart}} were {{story.color}} as {{story.coloreditem}}. Every where {{story.name}} went, the {{story.animal}} was sure to {{story.action}}.</p>
+    <h1><b>{{story.name}}</b>'s Little Buddy</h1>
+    <p><b>{{story.name}}</b> had a little {{story.animal}} it's {{story.bodyPart}} were {{story.color}} as {{story.coloreditem}}. Every where <b>{{story.name}}</b> went, the {{story.animal}} was sure to {{story.action}}.</p>
     <div class='end'>The End</div>
 <!--     <button ng-click='windowprint()'>Print Story</button> -->
   <div class='button'><button ng-click='tableContents()' class='btn-primary'>Return to Table of Contents</button></div>
