--- a/views/story_templates/little_buddy_tmpl.html
+++ b/views/story_templates/little_buddy_tmpl.html
@@ -3,7 +3,7 @@
         <div class='col-md-2'></div>
         <div class='col-md-8' id='page'>
           <h1>Your story</h1>
-          {{story.name}} had a little {{story.animal}} it's {{story.bodyPart}} were {{story.color}} as {{story.coloreditem}}. Every where {{story.name}} went, the {{story.animal}} was sure to {{story.action}}.
+          <b>{{story.name}}</b> had a little {{story.animal}} it's {{story.bodyPart}} were {{story.color}} as {{story.coloreditem}}. Every where <b>{{story.name}}</b> went, the {{story.animal}} was sure to {{story.action}}.
           </div>
         <div class='col-md-2'></div>
 
