commented out link for ode to code,

--- a/css/buttons.css
+++ b/css/buttons.css
@@ -1,7 +1,7 @@
 
 
 /*///
-Overriding button colors in statcic and hover states making all borders black
+Overriding button colors in static and hover states making all borders black
 info=yellow, danger=red, success = green, primary and warning are purple, But warning is oval, primary is buttons are truncated at the ends and only used as build story and retuen to TOC buttons.
  default remains white,
 ///////////*/
