--- a/css/buttons.css
+++ b/css/buttons.css
@@ -2,9 +2,22 @@
 
 /*///
 Overriding button colors in static and hover states making all borders black
-info=yellow, danger=red, success = green, primary and warning are purple, But warning is oval, primary is buttons are truncated at the ends and only used as build story and retuen to TOC buttons.
+info=yellow, danger=red, success = green, primary and warning are purple, But warning is oval, primary is buttons are truncated at the ends and only used as build story and return to TOC buttons.
  default remains white,
 ///////////*/
+
+
+/*///
+Updating color scheme new color scheme is shades of blues with some purple.
+    royalblue #2907EB and hover 08a6ff for Warning
+    bright blue #3D5AFE with hover #0B3678 for Danger and success
+    purple #420D8F for primary and Info
+
+    Gray #D3DDE3 Page back ground is gray
+    app Backgroud(Rules) is Blue #7108FF
+
+//// */
+
 
 .btn-default:hover {
   border-color: black;
@@ -12,36 +25,36 @@ info=yellow, danger=red, success = green, primary and warning are purple, But wa
 }
 
 .btn-warning {
-  background-color: rgba(255, 204, 0, 0.99);
+  background-color: #2907EB;
 }
 
 .btn-warning:hover {
-  background-color: rgba(247, 203, 0, 0.86);
+  background-color: #08a6ff;
   border-color: black;
   border-width: 6px;
 }
 
 .btn-danger {
-  background-color: #b91200;
+  background-color: #3D5AFE;
 }
 
 .btn-danger:hover {
-  background-color: #982e3b;
+  background-color: #0B3678;
   border-color: black;
   border-width: 6px;
 }
 
 .btn-success {
-  background-color: #009900;
+  background-color: #3D5AFE;
 }
 .btn-success:hover {
-  background-color: #006600;
+  background-color: #0B3678;
   border-color: black;
   border-width: 6px;
 }
 
 .btn-primary, .btn-info{
-  background-color: #43009B;
+  background-color: #420D8F;
 }
 
 .btn-primary:hover, .btn-info:hover {
