--- a/css/how.css
+++ b/css/how.css
@@ -5,8 +5,7 @@
 /* ////// How to Play instructions //////// */
 
 #rules {
-  background-color: rgba(98, 160, 219, 0.98);
-  font-size: 2em;
+  background-color: #7108FF;
   margin-top: 10px;
   border-radius: 6px;
   padding-top: 12px;
