--- a/views/baaStory.html
+++ b/views/baaStory.html
@@ -34,7 +34,7 @@
         <input type='text' ng-model='story.buy'>
       </div><br>
       <div class='col-md-4'>
-        A job (fireman, teacher, other)
+        A job (firefighter, teacher, other)
       </div>
       <div>
         <input type='text' ng-model='story.job'>
